# TechStorm-DS16-group3

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
ansible/playfile/: main.yml
app_picture_classify/: .env  db.sqlite3  manage.py
app_picture_classify/app_image/: apps.py  forms.py  image_handler.py  image_validations.py  models.py  urls.py  utils.py  views.py
app_picture_classify/app_image/static/app_image/: main.css
app_picture_classify/app_image/templates/app_image/: base.html  home_page.html  index.html  model_plots.html
app_picture_classify/app_picture_classify/: asgi.py  settings.py  urls.py  wsgi.py
app_picture_classify/locale/uk/LC_MESSAGES/: django.mo  django.po
app_picture_classify/users/: forms.py  urls.py  views.py
app_picture_classify/users/templates/users/: login.html  signup.html
docker/piclhub/: Dockerfile
docker/webhook/: Dockerfile
model/: model_project_EDA.ipynb  model_project_test.ipynb  models_lib.py  plot_history_lib.py
model/trained_models/: model_filter_flatten_1-256_vgg16.h5
techstorm_sowa_app/: db.sqlite3  manage.py  output.json
techstorm_sowa_app/app_image_categorize/: apps.py  forms.py  image_validations.py  urls.py  utils.py  views.py
techstorm_sowa_app/app_image_categorize/static/app_image/: main.css
techstorm_sowa_app/techstorm_sowa_app/: asgi.py  settings.py  urls.py  wsgi.py
techstorm_sowa_app/users/: forms.py  urls.py  views.py
techstorm_sowa_app/users/templates/users/: logout.html  password_reset.html  (+4 more)
webhook/: ansible_hook.py
(+6 files in other folders)
